--- a/views/res_partner_views.xml
+++ b/views/res_partner_views.xml
@@ -11,6 +11,7 @@
             <xpath expr="//field[@name='website']" position="after">
                 <field name="insurer_id"/>
                 <field name="certificate_prefix"/>
+                <field name="awex_eligible"/>
             </xpath>
         </field>
     </record>
